# docrag

./: .env.example  .gitignore  GUIDE.md  INSTALL.md  README.md  cli.py  gerar_tutorial.py  pyproject.toml  requirements.txt
src/: cli.py  crawler.py  expert.py  indexer.py  playground_app.py  reviewer.py  translator.py
src/sites/: agno.py
