[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docrag"
version = "0.1.0"
description = "RAG sobre documentação PT-BR — agno + ChromaDB + Groq"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["src", "src.sites"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
